--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -20,9 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomePage"
-            android:parentActivityName=".MainActivity"/>
-
+        <activity
+            android:name=".HomePage"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FarmPage"
             android:parentActivityName=".MainActivity" />
@@ -84,7 +84,11 @@
             android:name=".DownloadLocationPage"
             android:parentActivityName=".DownloadPage" />
         <activity android:name=".FilePage" />
-        <activity android:name=".Login"></activity>
+        <activity android:name=".Login" />
+        <activity
+            android:name=".AddGarden2"
+            android:parentActivityName=".FarmPage" />
+        <activity android:name=".AddFarming2"></activity>
     </application>
 
 </manifest>
