--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,10 @@
         <activity
             android:name=".AddGarden2"
             android:parentActivityName=".FarmPage" />
-        <activity android:name=".AddFarming2"></activity>
+        <activity
+            android:name=".AddFarming2"
+            android:parentActivityName=".FarmPage"/>
+
     </application>
 
 </manifest>
