--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name=".UploadPage"
             android:parentActivityName=".MainActivity" />
         <activity
+            android:name=".UploadPage2"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".FarmingPage"
             android:parentActivityName=".FarmPage" />
         <activity
