สร้าง login2 & ลิ้งค์หน้าให้ละ

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,8 @@
         <activity
             android:name=".AddFarming2"
             android:parentActivityName=".FarmPage" />
-        <activity android:name=".DeleteAll"></activity>
+        <activity android:name=".DeleteAll" />
+        <activity android:name=".Login2"></activity>
     </application>
 
 </manifest>
