ก่อนสอบ ผ่าน ๆ เพี้ยง ๆ

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,8 +97,10 @@
         <activity
             android:name=".AddFarming2"
             android:parentActivityName=".FarmPage" />
-        <activity android:name=".DeleteAll" />
-        <activity android:name=".Login2"></activity>
+        <activity android:name=".DeleteAll"
+            android:parentActivityName=".DownloadPage"/>
+        <activity android:name=".Login2"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
