--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
     compile 'com.loopj.android:android-async-http:1.4.9'
+
+    compile (
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1']
+    )
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
