ทำ splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashScreen" android:theme="@style/generalnotitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -97,10 +98,13 @@
         <activity
             android:name=".AddFarming2"
             android:parentActivityName=".FarmPage" />
-        <activity android:name=".DeleteAll"
-            android:parentActivityName=".DownloadPage"/>
-        <activity android:name=".Login2"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".DeleteAll"
+            android:parentActivityName=".DownloadPage" />
+        <activity
+            android:name=".Login2"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
